--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -89,7 +89,7 @@ p {
 
 #picture>div {
     width: 30%;
-    border: 2p solid palegreen;
+    /* border: 2p solid palegreen; */
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
@@ -130,7 +130,7 @@ p {
 
 #aks {
     width: 100%;
-    border: 1px solid rebeccapurple;
+    /* border: 1px solid rebeccapurple; */
     display: flex;
     margin-top: 100px;
 
@@ -177,17 +177,18 @@ h3 {
     width: 100%;
     height: 400px;
     display: flex;
-    border: 2px solid rebeccapurple;
+    /* border: 2px solid rebeccapurple; */
 }
 
 #vdo {
+    margin-top: -150px;
     width: 50%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 #common {
     width: 50%;
-    border: 2px solid goldenrod;
+    /* border: 2px solid goldenrod; */
 
 }
 
@@ -227,18 +228,19 @@ h3 {
     height: auto;
     display: flex;
 
-    border: 2px solid rebeccapurple;
+    /* border: 2px solid rebeccapurple; */
 }
 
 #p2 {
+    margin-top: 100px;
     width: 50%;
-    border: 2px solid goldenrod;
+    /* border: 2px solid goldenrod; */
 
 }
 
 #poto {
     width: 50%;
-    border: 2px solid goldenrod;
+    /* border: 2px solid goldenrod; */
 }
 
 #poto>img {
@@ -252,4 +254,87 @@ h3 {
 
 #TT {
     margin-left: 70px;
+}
+
+#heart {
+    /* border: 2px solid darkgoldenrod; */
+    width: 100%;
+    height: 300px;
+
+}
+
+#heart>img {
+    margin-top: 50px;
+}
+
+#heart>h1 {
+    font-size: 60px;
+    font-weight: 300;
+
+}
+
+#heart>p {
+    align-items: center;
+    text-align: center;
+    width: 80%;
+    margin-left: 100px;
+    font-size: 16px;
+}
+
+#heart>button {
+    padding: 15px 25px 15px 25px;
+    /* justify-content: space-between; */
+    /* gap: 50px; */
+    margin-left: 40px;
+    font-size: 16px;
+    background-color: white;
+    border: 2px solid black;
+}
+
+#heart>button:hover {
+    background-color: black;
+    color: white;
+}
+
+#BB {
+    margin-top: 100px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    border: 2px solid rgb(47, 47, 241);
+    background-color: rgb(47, 47, 241);
+}
+
+#BB h1 {
+    color: white;
+    font-weight: 500;
+    font-size: 40px;
+}
+
+#BB p {
+    color: white;
+    font-size: 18px;
+    text-align: center;
+}
+
+#BB h2 {
+    color: rgb(226, 153, 90);
+    font-size: 80%;
+}
+
+#BB button {
+    margin-top: 300px;
+    background-color: rgb(47, 47, 241);
+    border: solid 2px white;
+    color: white;
+    /* font-weight: ; */
+    margin-left: -800px;
+    padding: 15px 35px 15px 35px;
+
+}
+
+#BB button:hover {
+    background-color: white;
+    border: solid 2px white;
+    color: rgb(47, 47, 241);
 }
